--- a/css/authentication/signup.css
+++ b/css/authentication/signup.css
@@ -69,6 +69,7 @@ button {
   cursor: pointer;
   width: 100%;
   opacity: 0.9;
+  border-radius: 4px;
 }
 
 .signingheader {
@@ -95,6 +96,8 @@ button:hover {
 #signin {
   text-align: center;
   margin-top: 17px;
+  text-decoration: none;
+  color: black;
 }
 
 
